--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <p>Just follow the instructions. <br />
       In this example we will use the name <code>neonode-app</code> for our project.</p>
 
-      <p><img src="https://camo.githubusercontent.com/559bf48c222a3a63cf6ede05b1ce17dc8e3e014f/68747470733a2f2f6d6f6e6f736e61702e636f6d2f66696c652f78336d446c6a63414e566849366d4670796d48714a376a705975485a32742e706e67" alt="yo-neonode" /></p>
+      <p><img src="images/1.png" alt="yo-neonode" /></p>
 
       <p>If you don't set a project name it will create the project in the current directory.</p>
 
@@ -92,14 +92,14 @@
 
       <pre>$ webpack -d</pre>
 
-      <p><img src="https://camo.githubusercontent.com/96c61e97751d2acaee412e196087bd5dd6cff8a3/68747470733a2f2f6d6f6e6f736e61702e636f6d2f66696c652f517a776b32456449476c3966627142437a48334e514e68327344594257732e706e67" alt="webpack-d" /></p>
+      <p><img src="images/2.png" alt="webpack-d" /></p>
 
       <p>And finally to start the server run:</p>
       <pre>$ npm start</pre>
-      <p><img src="https://camo.githubusercontent.com/ea1c8b0f7329869f9a75d8b9a1c77e6e92884b65/68747470733a2f2f6d6f6e6f736e61702e636f6d2f66696c652f7637394e5a74333347747145556a426d764c4e47584d38513449345864552e706e67" alt="npm-start" /></p>
+      <p><img src="images/3.png" alt="npm-start" /></p>
 
       <p>Now point your browser to http://localhost:3000 you should see something like this:</p>
-      <p><img src="https://camo.githubusercontent.com/90be94aa5b7a6260a0288fd2c1e05d45d6757b5f/68747470733a2f2f6d6f6e6f736e61702e636f6d2f66696c652f6d6e7963514b763064475148614c6349355a717230595a487830486850522e706e67" alt="it-works" /></p>
+      <p><img src="images/4.png" alt="it-works" /></p>
 
       <hr />
 
@@ -318,7 +318,7 @@
       <pre><%= flash.success %></pre>
 
       <h3><a name="Flow">Neonode's request flow</a></h3>
-      <img src="https://camo.githubusercontent.com/4785ccca93693e85a807b9ee51667a625076a9b0/68747470733a2f2f7777772e6c7563696463686172742e636f6d2f7075626c69635365676d656e74732f766965772f64386463363433662d613163652d343838392d383866662d6564663632383561336664612f696d6167652e706e67" alt="request flow" />
+      <img src="images/5.png" alt="request flow" />
 
       <hr />
 
