Added empathia link

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ $ NODE_ENV=production knex migrate:latest
 
       <hr />
 
-      <p class="footer">Made with coffee &amp; &lt;3 at: <img class="empathia-logo" src="images/logo-empathia.svg" alt="empathia" /></p>
+      <p class="footer">Made with coffee &amp; &lt;3 at: <a href="http://empathia.agency"><img class="empathia-logo" src="images/logo-empathia.svg" alt="empathia.agency" /></a></p>
 
     </div>
   </div>
