fix / installation cmd

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h2><a name="Installation" class="title">Installation</a></h2>
 
       <p>First you need to install yeoman and neonode's generator:</p>
-      <pre>$ npm install -g yeoman genearator-neonode</pre>
+      <pre>$ npm install -g yo generator-neonode</pre>
 
       <p>Now run neonode's generator:</p>
       <pre>$ yo neonode</pre>
