--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1><a href="https://empathia.github.io/neonode">//NEONODE</a></h1>
 
       <div class="menu">
-        <a class="item">::Getting Started</a>
+        <a class="item" href="#Installation">::Getting Started</a>
         <div class="menu vertical">
           <a class="item" href="#Installation">Installation</a>
           <a class="item" href="#Structure">Project Structure</a>
