--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Neonode - A Yeoman generator to scaffold an opinionated minimalistic MVC framework.</title>
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
-    <!--[if lt IE 9]>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.ie.min.css" />
-    <![endif]-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/vendor/normalize.min.css" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/vendor/github-corner.css" />
   </head>
   <body>
-    <a class="github-fork-ribbon" href="https://github.com/Empathia/neonode" title="Fork me on GitHub">Fork me on GitHub</a>
+    <a href="https://github.com/Empathia/neonode" rel="external" class="github-corner" title="Fork me on GitHub">
+      <svg width="80" height="80" viewBox="0 0 250 250">
+        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+      </svg>
+    </a>
+
     <div class="sidebar">
 
       <h1><a href="https://empathia.github.io/neonode">//NEONODE</a></h1>
@@ -69,7 +70,7 @@
     <div class="container">
       <div class="center">
         <img class="logo" src="images/logo.svg" alt="neonode logo" />
-        <p class="version">v0.0.3</p>
+        <p class="version">v0.0.4</p>
         <p class="description">A Yeoman generator to scaffold an opinionated minimalistic MVC framework</p>
       </div>
 
@@ -88,18 +89,18 @@
 
       <p>If you don't set a project name it will create the project in the current directory.</p>
 
-      <p><code>neonode</code> uses webpack to compile its assets, to do it run:</p>
+      <p>Compile the assets:</p>
 
-      <pre>$ webpack -d</pre>
+      <pre>$ npm run build</pre>
 
-      <p><img src="images/2.png" alt="webpack-d" /></p>
+      <p><img src="images/npm-run-build.png" alt="npm run build" /></p>
 
       <p>And finally to start the server run:</p>
       <pre>$ npm start</pre>
       <p><img src="images/3.png" alt="npm-start" /></p>
 
       <p>Now point your browser to http://localhost:3000 you should see something like this:</p>
-      <p><img src="images/4.png" alt="it-works" /></p>
+      <p><img src="images/browser.png" alt="it-works" /></p>
 
       <hr />
 
@@ -147,7 +148,7 @@
         <li><a href="https://github.com/pateketrueke/route-mappings">Route Mappings</a></li>
         <li><a href="https://github.com/freshout-dev/thulium/">Thulium</a></li>
         <li><a href="https://github.com/sgarza/thulium-express">thulium-express</a></li>
-        <li><a href="https://webpack.github.io/">Webpack</a></li>
+        <li><a href="https://github.com/gextech/tarima-cli">tarima-cli</a></li>
       </ul>
 
       <hr />
@@ -436,7 +437,7 @@ $ NODE_ENV=production knex migrate:latest
 
       <p>You tell the layout where to render other views with the <code>yield</code> keyword:</p>
 
-      <script src="https://gist.github.com/sgarza/31b101604cfe7f18bc7fc82b23d59fa5.js"></script>
+      <script src="https://gist.github.com/noeldelgado/2b4a171237de3ca9e6c29fffd4abefc9.js"></script>
 
       <p>Which layout to use in any controller method/action is specified as another template's variable.</p>
 
@@ -511,7 +512,7 @@ $ NODE_ENV=production knex migrate:latest
 
       <hr />
 
-      <p class="footer">Made with coffee &amp; &lt;3 at: <a href="http://empathia.agency"><img class="empathia-logo" src="images/logo-empathia.svg" alt="empathia.agency" /></a></p>
+      <p class="footer center">Made with coffee &amp; &lt;3 at: <a href="http://empathia.agency"><img class="empathia-logo" src="images/logo-empathia.svg" alt="empathia.agency" /></a></p>
 
     </div>
   </div>
